<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondosutagris"
    tools:context=".Contacto">

    <EditText
        android:id="@+id/nombreyApellido"
        android:layout_width="355dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/nombre_apellido"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/email"
        android:layout_width="355dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/ingrese_email"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/telefono"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombreyApellido" />

    <EditText
        android:id="@+id/telefono"
        android:layout_width="355dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/ingrese_telefono"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/mensaje"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Formulario de contacto"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="358dp"
        android:layout_height="67dp"
        android:text="Escribanos sus consultas o sugerencias, Nos pondremos en contacto pronto"
        app:layout_constraintBottom_toTopOf="@+id/nombreyApellido"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/boton_EnviarForm"
        android:layout_width="354dp"
        android:layout_height="68dp"
        android:backgroundTint="@color/naranja_oficial"
        android:text="@string/boton_enviar_formulario"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mensaje" />

    <EditText
        android:id="@+id/mensaje"
        android:layout_width="352dp"
        android:layout_height="158dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/ingrese_mensaje"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/boton_EnviarForm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/telefono" />
</androidx.constraintlayout.widget.ConstraintLayout>